<resources>
    <string name="app_name">WeatherClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Что-то пошло не так...</string>
    <string name="error_message">Произошла ошибка. Попробуйте повторить позднее.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Сеть недоступна!</string>
    <string name="humidity_label_text">Влажность</string>
    <string name="location_label_text">Московская область</string>
    <string name="time_label_text">В 5:00 АМ будет</string>
    <string name="percipChance_label_text">СНЕГ/ДОЖДЬ</string>
    <string name="google_maps_key_instructions" templateMergeStrategy="replace">AIzaSyDDJ0aWnssuFLGQdY5QvzOxBqkJvKgMbhk</string>
    <string name="hourly_forecast">Почасовой прогноз</string>
    <string name="daily_forecast">Прогноз на неделю</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_forecast_data">Нет данных для отображения</string>
    <string name="this_week_forecast_label">Погода на этой неделе</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
</resources>
